# mohitkr05.github.io

./: .gitignore  .gitmodules  404.html  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: hugo.yml
content/posts/: 2020-11-03-what-is-the-difference-between-a-shell-and-a-terminal.md  2020-11-05-.md  2020-11-05-the-best-ai-news-websites-blogs.md  2020-11-05-transform-your-career-in-these-hot-technologies-of-2020.md  2020-11-05-what-the-hell-is-artificial-intelligence.md  2020-11-06-what-is-robots-txt.md  2021-01-01-.md  2021-05-04-.md  2021-07-19-imt-2020.md  2021-08-04-two-tier-wordpress-architecture-based-on-containers.md  2021-08-07-checking-the-history-of-the-image.md  2021-08-07-docker-images-command.md  (+29 more)
docs/: about.md
oldposts/: 2020-11-03-installing-wordpress-locally-using-github.md  2020-11-04-the-google-search-guide.md  2020-11-06-setting-up-wacom-tablets-with-ubuntu.md  2021-07-23-public-switched-telephone-network.md  2021-08-07-how-to-push-your-image-in-docker-hub.md  2021-08-08-docker-build-command-usage.md  2021-08-10-.md  2021-08-10-multiservice-containers.md  2021-08-11-what-is-o-ran.md  2021-08-18-installing-kubeadm-on-centos.md  2021-08-18-types-of-deployments.md  2023-03-30-how-do-i-pass-environment-variables-to-docker-containers.md  2023-03-30-how-to-remove-docker-containers-2.md  2023-04-02-the-complete-guide-to-setup-wordpress-using-aws-lightsail.md  2023-04-05-.md  2023-04-18-using-chatgpt-as-a-personal-assistant.md
public/: 404.html  index.html  index.xml  rss.xml  sitemap.xml
site/: index.html
(+34 files in other folders)
