[tool.poetry]
name = "mohit kumar"
version = "0.1.0"
description = ""
authors = ["Mohit Kumar <mohitkr05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.45"
mkdocs-awesome-pages-plugin = "^2.9.3"

[tool.poetry.scripts]
serve = "mkdocs:serve"
build = "mkdocs:build"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
